--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 
 <body>
     <div id="slides">
+        <div class="overlay"></div>
         <div class="slides-container">
             <img src="images/slider1.png">
             <img src="images/slider2.png">
             <img src="images/slider3.png">
         </div>
+        <nav class="slides-navigation">
+            <a href="#" class="next"></a>
+            <a href="#" class="prev"></a>
+        </nav>
     </div>
     <script src="js/vendor/jquery.superslides.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
