Add the title section

--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
             <img src="images/slider2.png">
             <img src="images/slider3.png">
         </div>
+        
+        <div class="titleMessage">
+        	<div class="heading">
+        		<p class="main"> KRENAR BERISHA</p>
+        		<p class="sub typed"></p>
+        	</div>
+        </div>
+
         <nav class="slides-navigation">
             <a href="#" class="next"></a>
             <a href="#" class="prev"></a>
         </nav>
     </div>
     <script src="js/vendor/jquery.superslides.js"></script>
+    <script src="js/vendor/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
